fix builder pane back button valign in Firefox

--- a/src/insights-app/insights-builder/index.styl
+++ b/src/insights-app/insights-builder/index.styl
@@ -299,10 +299,15 @@ header-button-transition-duration = 150ms
             opacity .7
 
     .title-button
+      align-items center
       cursor pointer
-      padding 10px
+      display flex
+      height 100%
+      justify-content center
+      padding 0 10px
       position absolute
       svg-icon-style(grey-500, grey-700)
+      top 0
 
       &.close-button
         right 0
